--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs: # 构建的任务，一个工作流有多个构建任务，
           
     # 步骤3 下载项目依赖    
     - name: install
-      run: ynpm install
+      run: npm install
       
     # 步骤4 打包node项目
     - name: build
