--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,34 @@
-# 当前工作流的名称
 name: Auto build CI
-# ci触发的条件
-on:
-  push: # 什么请求触发
-    branches: 
-    - master： # 作用在哪些分支上
 
-jobs: # 构建的任务，一个工作流有多个构建任务，
-  build-and-deploy:
-    runs-on: ubuntu-latest # 在什么服务器上面执行这些任务，这里使用最新版本的ubuntu
-    
-    steps: # 构建任务的步骤，一个任务可分为多个步骤
-    
-    # 步骤1 拉取仓库代码
-    - name: Checkout # 步骤名称
-      uses: actions/checkout@v2 
-      
-    # 步骤2 给当前服务器安装node
-    - name: use node
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16 # node版本
-        cache: "yarn"
-          
-    # 步骤3 下载项目依赖    
-    - name: install
-      run: npm install
-      
-    # 步骤4 打包node项目
-    - name: build
-      run: npm run build # 此处是你node项目的构建脚本
-      
-    # 步骤5 部署项目
-    - name: deploy
-      uses: JamesIves/github-pages-deploy-action@4.1.6
-      with:
-        # 供用户访问的github access_token 下面的变量是在准备阶段自定义的变量
-        access_token: ${{ secrets.access_token }} 
-        # 发布到指定分支
-        branch: gh-pages
-        # 指定发布的打包后的文件
-        folder: build/test/
+on:
+  release:
+    types:
+      - created
+
+jobs:
+  release:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js and yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build app
+        run: npm run build
+
+      - name: Deploy
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          # 发布到指定分支
+          branch: gh-pages
+          committer_email: 1834423612@qq.com
+        env:
+          access_token: ${{ secrets.access_token }}
