--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -1,5 +1,5 @@
 # 当有改动推送到master分支时，启动Action
-name: 自动部署
+name: Auto Deploy
 # 当有改动推送到master分支时，启动Action
 on:
   push:
@@ -39,4 +39,5 @@ jobs:
           token: ghp_66X0S62ygQzdbFLnBh8b03DFXl3j3t0XwNXy
           repository-name: 1834423612/zdschool
           branch: gh-pages
+          folder: /
           commit-message: '${{ github.event.head_commit.message }} Updated By Github Actions'
