--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -9,6 +9,9 @@ on:
   release:
     types:
       - published
+      
+permissions:
+  contents: write
 
 jobs:
   deploy:
@@ -31,6 +34,7 @@ jobs:
 
       - name: build
         run: |
+          npm ci
           npm run build
 
       - name: 部署到Github
@@ -39,5 +43,5 @@ jobs:
           token: ghp_66X0S62ygQzdbFLnBh8b03DFXl3j3t0XwNXy
           repository-name: 1834423612/zdschool
           branch: gh-pages
-          folder: /
+          folder: .
           commit-message: '${{ github.event.head_commit.message }} Updated By Github Actions'
