--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -10,6 +10,7 @@ on:
     types:
       - published
       
+# 授予 写 权限
 permissions:
   contents: write
 
@@ -28,12 +29,12 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: 安装 环境
+      - name: 安装 依赖文件
         run: |
           export TZ='Asia/Shanghai'
           npm install
 
-      - name: build
+      - name: 构建项目
         run: |
           npm run build
 
@@ -44,4 +45,4 @@ jobs:
           repository-name: 1834423612/zdschool
           branch: gh-pages
           folder: '.'
-          commit-message: '${{ github.event.head_commit.message }} Updated By Github Actions'
+          commit-message: '${{ github.event.head_commit.message }} - Deploy By Github Actions'
